cache/l2cache/src/main/java/com/example/l2cache/jwt/error/Remote5XXException.java
package com.example.l2cache.jwt.error;

public class Remote5XXException extends RuntimeException{
    public Remote5XXException(String message) {
    }
}
